# KB-Builder

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  Security  config_example.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
KB-Builder/: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  config_example.yml  main.py  pyproject.toml
KB-Builder/apps/: manage.py
KB-Builder/apps/application/: apps.py  urls.py
KB-Builder/apps/common/: __init__.py
KB-Builder/apps/dataset/: apps.py  urls.py
KB-Builder/apps/embedding/: apps.py
KB-Builder/apps/setting/: apps.py  urls.py
KB-Builder/apps/smartdoc/: asgi.py  conf.py  const.py  urls.py  wsgi.py
KB-Builder/apps/users/: apps.py  urls.py
KB-Builder/conf/: config_example.yml
KB-Builder/installer/: Dockerfile  Dockerfile-python-pg  Dockerfile-vector-model  config.yaml  init.sql  install_model.py  run-maxkb.sh
KB-Builder/ui/: .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  env.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
KB-Builder/ui/src/: App.vue  main.ts
apps/application/: urls.py
apps/application/migrations/: 0007_alter_application_prologue.py
apps/dataset/: urls.py
apps/setting/: apps.py  urls.py
apps/smartdoc/: const.py
conf/: config_example.yml
installer/: backup.sh  config.yaml  install_model.py
ui/: .eslintrc.cjs  vite.config.ts
ui/env/: .env
ui/src/: App.vue
(+529 files in other folders)
